# flowguard

./: .gitattributes  .gitignore  HOW_TO_RUN.md  README.md  docker-compose.yml  render.yaml  run_flowguard.sh
capture-cpp/: .dockerignore  CMakeLists.txt  Dockerfile
capture-cpp/build-benchmark/: CTestTestfile.cmake  flowguard_parser_benchmark
capture-cpp/include/: BlockingQueue.hpp  FeatureEmitter.hpp  FlowAggregator.hpp  FlowKey.hpp  FlowStats.hpp  JsonSerializer.hpp  PacketInfo.hpp  PacketParser.hpp
capture-cpp/scr/: FeatureEmitter.cpp  FlowAggregator.cpp  JsonSerializer.cpp  PacketParser.cpp  main.cpp
capture-cpp/src/: FeatureEmitter.cpp  FlowAggregator.cpp  JsonSerializer.cpp  PacketParser.cpp  benchmark.cpp  main.cpp  parser_benchmark.cpp
capture-cpp/tests/: test_blocking_queue.cpp  test_flow_aggregator.cpp  test_flow_key.cpp
capture-ebpf/: loader  loader.c  xdp_filter.c  xdp_parser_benchmark.c
dashboard/: Dockerfile  index.html
dashboard/src/: App.jsx  api.js
data/: flows_output.before_real_pcap.jsonl  flows_output.jsonl
data/attack_samples/: 2025-10-02-traffic-from-infected-Android-phone.pcap
data/sample/: real_attack.pcap  small_sample.pcap
docs/: app-tree.md  benchmark_output.txt  case-study.md  cpp_parser_benchmark.txt  ebpf_vs_cpp_benchmark.json  ebpf_vs_cpp_benchmark.md  ebpf_vs_cpp_runs.csv  evaluation_report.txt  false-positive-analysis.md  gnn_evaluation.txt  live_shadow_predictions.json  ml-models.md  model_comparison.json  real_data_evaluation.txt  real_dataset_preparation.txt  real_only_evaluation.txt  real_only_metrics.json  real_pcap_case_study.md  resume_metrics.json  rf_threshold_tuning.txt  threading-model.md  uvicorn-8001.pid  uvicorn.pid
docs/benchmark-logs/: tcpreplay-run-1.txt  tcpreplay-run-2.txt  tcpreplay-run-3.txt  tcpreplay-run-4.txt  tcpreplay-run-5.txt  tcpreplay-run-6.txt  (+1 more)
ml-service/: .gitignore  Dockerfile  docker-entrypoint.sh  prepare_cicids_data.py  requirements.txt
scripts/: benchmark_ebpf_vs_cpp.sh
(+72 files in other folders)
